conf/template/iptables/iptables_web-proxy
# Generated by iptables-save v1.4.21 on Tue Mar 22 11:37:59 2016
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [38660:21542174]
-A INPUT -s 14.152.90.37/32 -j ACCEPT
# 允许后端服务器的所有连接，不然会受下面的并发连接数的限制
-A INPUT -p tcp -m connlimit --connlimit-above 15 --connlimit-mask 32 --connlimit-saddr -j DROP
# 限制每个IP的并发连接最多15个
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 15 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 60001 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Tue Mar 22 11:37:59 2016
